# book_service_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 290e0dffdaab_initial_schema.py
app/: main.py
app/api/v1/: __init__.py  books.py  health.py
app/api/v2/: __init__.py  books.py  health.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: book.py
app/services/: ollama_client.py  web_crawler.py  web_search.py
scripts/: seed_books.py
tests/: conftest.py  test_books_crud.py  test_books_query.py  test_health.py  test_v2_books.py
